# RWG

./: pyproject.toml  readme.md
data/: load_data.py
src/: .env  config.py  main.py  prompts.py  test.py  utils.py
src/agent/: action.py  agent.py  model.py  nodes.py
src/controller/: actor.py  critic.py
src/rl_env/: graph.py  states.py
test/: test.py
